--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -90,6 +90,51 @@ nav span a {
   padding: 0 1.5rem;
 }
 
+/* Banner Section */
+.banner {
+  display: inline-flex;
+  align-items: center;
+  background-color: #9FB8C2;
+  width: 100%;
+  margin-top: 4rem;
+}
+
+.banner img {
+  max-width: 60%;
+  padding: 2rem 1.5rem;
+}
+
+.text {
+  max-width: 30%;
+  line-height: 3rem;
+  padding-left: 1rem;
+}
+
+.text h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  padding: 1rem 0;
+
+}
+
+.text h2 {
+  font-size: 1.25rem;
+  line-height: 2rem;
+  max-width: 90%;
+}
+
+.text h3 {
+  background-color: grey;
+  text-align: center;
+  margin-top: 2rem;
+  max-width: 80%;
+  color: white
+}
+
+.banner .text a {
+  text-decoration: none;
+}
+
 
 
 /* Media Specific Styling */
