--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,13 @@
 @font-face {
   font-family: 'Work Sans';
   font-style: normal;
+  font-weight: 300;
+  src: local('Work Sans Light'), local('WorkSans-Light'), url(https://fonts.gstatic.com/s/worksans/v3/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+}
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
   font-weight: 400;
   src: local('Work Sans'), local('WorkSans-Regular'), url(https://fonts.gstatic.com/s/worksans/v3/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
@@ -19,10 +26,11 @@
 html {
   font-size: 16px;
   font-family: "Work Sans";
+  color: #302F30;
 }
 
 body {
-  line-height: 1.4em;
+  line-height: 1.5rem;
 }
 
 div {
@@ -38,6 +46,7 @@ header {
   width: 100%;
   height: 4rem;
   border-bottom: 1px solid lightgrey;
+  background-color: white;
 }
 
 header a:hover {
@@ -60,7 +69,7 @@ header a {
 strong {
   font-weight: 600;
   color: #302F30;
-}
+} /* End Header */
 
 /* Nav Section */
 nav {
@@ -90,11 +99,11 @@ nav span a {
   padding: 0 1.5rem;
 }
 
-/* Banner Section */
+/* Main Banner Section */
 .banner {
   display: inline-flex;
   align-items: center;
-  background-color: #9FB8C2;
+  background-color: #D2E1E5;
   width: 100%;
   margin-top: 4rem;
 }
@@ -102,8 +111,9 @@ nav span a {
 .banner img {
   max-width: 60%;
   padding: 2rem 1.5rem;
-}
+} /* End Main Banner Section */
 
+/* Banner Text Section */
 .text {
   max-width: 30%;
   line-height: 3rem;
@@ -111,30 +121,138 @@ nav span a {
 }
 
 .text h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 600;
   padding: 1rem 0;
-
 }
 
 .text h2 {
   font-size: 1.25rem;
+  font-weight: 600;
   line-height: 2rem;
   max-width: 90%;
 }
 
 .text h3 {
-  background-color: grey;
+  background-color: #364552;
   text-align: center;
   margin-top: 2rem;
   max-width: 80%;
-  color: white
+  color: white;
+  border-radius: 4px;
+  transition: all .3s;
+}
+
+.text h3:hover {
+  background-color: #939EA1;
+  letter-spacing: 2px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .banner .text a {
   text-decoration: none;
+} /* End Banner Text Section */
+
+/* Main Section */
+.main {
+  display: flex;
+  max-width: 100%;
 }
 
+/* Main Box Section */
+.main-box {
+  display: inline-block;
+  max-width: 60%;
+  margin: 0 auto;
+}
+
+.main .main-box img {
+  max-width: 93%;
+  padding: 2rem 1.5rem;
+} /* End Main Box Section */
+
+/* Main Text Section */
+.main-text {
+  max-width: 90%;
+  padding: 0 1.5rem 2rem;
+}
+
+.main-text h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  padding-bottom: 1.5rem;
+  line-height: 3rem;
+}
+
+.main-text p {
+  font-weight: 300;
+  padding-bottom: 2rem;
+}
+
+.main-text h5 {
+  font-size: .9rem;
+}
+
+.main-text h5 a {
+  text-decoration: none;
+  color: #302F30;
+  transition: all .3s;
+}
+
+.main-text h5 a:hover {
+  color: #B2B7BA;
+  text-decoration: underline;
+} /* End Main Text Section */
+
+/* Main Supporting Section */
+.main-supporting {
+  max-width: 40%;
+  margin: 0 auto;
+  padding: 1rem 0;
+  border-left: 1px solid #B2B7BA;
+  background-color: #E8EEF2;
+}
+
+.main-supporting .supporting img {
+  max-width: 35%;
+  padding: 1rem;
+}
+
+.supporting {
+  display: inline-flex;
+  align-items: center;
+  transition: all .3s;
+} /* End Main Supporting Section */
+
+.supporting:hover {
+  background-color: #364552;
+  color: #E8EEF2;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/* Main Supporting Text Section */
+.supporting-text h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 2rem;
+}
+
+.supporting-text h5 {
+  font-weight: 300;
+  line-height: 2rem;
+  padding-bottom: 1rem;
+}
+
+.supporting-text a {
+  color: black;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.supporting-text a:hover {
+  color: #E8EEF2;
+  text-decoration: underline;
+} /* End Main Supporting Text Section */
 
 
 /* Media Specific Styling */
