--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,6 +47,7 @@ header {
   height: 4rem;
   border-bottom: 1px solid lightgrey;
   background-color: white;
+  margin: 0;
 }
 
 header a:hover {
@@ -105,7 +106,8 @@ nav span a {
   align-items: center;
   background-color: #D2E1E5;
   width: 100%;
-  margin-top: 4rem;
+  padding-top: 4rem;
+  margin: 0 auto;
 }
 
 .banner img {
@@ -137,7 +139,7 @@ nav span a {
   background-color: #364552;
   text-align: center;
   margin-top: 2rem;
-  max-width: 80%;
+  max-width: 95%;
   color: white;
   border-radius: 4px;
   transition: all .3s;
@@ -210,7 +212,6 @@ nav span a {
   margin: 0 auto;
   padding: 1rem 0;
   border-left: 1px solid #B2B7BA;
-  background-color: #E8EEF2;
 }
 
 .main-supporting .supporting img {
@@ -253,6 +254,72 @@ nav span a {
   color: #E8EEF2;
   text-decoration: underline;
 } /* End Main Supporting Text Section */
+
+/* Learning Section */
+.learning-container {
+  border-top: 1px solid #B2B7BA;
+  padding-bottom: 1rem;
+  background-color: #E8EEF2;
+}
+
+.learning-container h1 {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 600;
+  padding: 2rem 0 1rem;
+}
+
+.courses {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: auto;
+}
+
+.course {
+  width: 30%;
+  margin: 1rem;
+  padding-bottom: 1.5rem;
+  background-color: #364552;
+  color: #E8EEF2;
+  transition: all .3s;
+}
+
+.course:hover {
+  background-color: #939EA1;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #364552;
+}
+
+.course-img img {
+  width: 100%;
+  height: auto;
+}
+
+.course-txt {
+  padding: 1rem 1rem 1.5rem 1rem;
+}
+
+.course-txt h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.course-txt h4 {
+  padding: .5rem 0;
+  color: #E8EEF2;
+  text-decoration: none;
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.course-txt a {
+  text-decoration: none;
+}
+
+
+
+
 
 
 /* Media Specific Styling */
