--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,14 +28,12 @@ html {
   font-family: "Work Sans";
   color: #302F30;
 }
-
 body {
   line-height: 1.5rem;
 }
-
 div {
   display: block;
-}
+}/* End Base Styles */
 
 /* Header */
 header {
@@ -49,15 +47,12 @@ header {
   background-color: white;
   margin: 0;
 }
-
 header a:hover {
   color: #B2B7BA;
 }
-
 header a {
   transition: color .3s;
 }
-
 .logo {
   display: flex;
   align-items: center;
@@ -66,7 +61,6 @@ header a {
   font-size: 1.5rem;
   color: #8C898B;
 }
-
 strong {
   font-weight: 600;
   color: #302F30;
@@ -76,16 +70,14 @@ strong {
 nav {
   margin: 0 .5rem;
 }
-
 nav span {
   display: inline-block;
   margin-right: 1rem;
 }
-
 nav span a {
   color: #302F30;
   text-decoration: none;
-}
+}/* End Nav Section */
 
 
 /* Phone Container Styling */
@@ -95,21 +87,19 @@ nav span a {
   justify-content: space-between;
   flex-grow: 1;
 }
-
 .phone-container img {
   padding: 0 1.5rem;
-}
+} /* End Phone Container Styling */
 
 /* Main Banner Section */
 .banner {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   background-color: #D2E1E5;
   width: 100%;
   padding-top: 4rem;
   margin: 0 auto;
 }
-
 .banner img {
   max-width: 60%;
   padding: 2rem 1.5rem;
@@ -121,36 +111,29 @@ nav span a {
   line-height: 3rem;
   padding-left: 1rem;
 }
-
 .text h1 {
   font-size: 3rem;
   font-weight: 600;
   padding: 1rem 0;
 }
-
 .text h2 {
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 2rem;
-  max-width: 90%;
 }
-
 .text h3 {
   background-color: #364552;
   text-align: center;
   margin-top: 2rem;
-  max-width: 95%;
   color: white;
   border-radius: 4px;
   transition: all .3s;
 }
-
 .text h3:hover {
   background-color: #939EA1;
   letter-spacing: 2px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-
 .banner .text a {
   text-decoration: none;
 } /* End Banner Text Section */
@@ -160,47 +143,39 @@ nav span a {
   display: flex;
   max-width: 100%;
 }
-
-/* Main Box Section */
 .main-box {
   display: inline-block;
   max-width: 60%;
   margin: 0 auto;
 }
-
 .main .main-box img {
   max-width: 93%;
   padding: 2rem 1.5rem;
-} /* End Main Box Section */
+} /* End Main Section */
 
 /* Main Text Section */
 .main-text {
   max-width: 90%;
   padding: 0 1.5rem 2rem;
 }
-
 .main-text h1 {
   font-size: 2.5rem;
   font-weight: 600;
   padding-bottom: 1.5rem;
   line-height: 3rem;
 }
-
-.main-text p {
+blockquote {
   font-weight: 300;
-  padding-bottom: 2rem;
 }
-
 .main-text h5 {
   font-size: .9rem;
+  padding-top: 2rem;
 }
-
 .main-text h5 a {
   text-decoration: none;
   color: #302F30;
   transition: all .3s;
 }
-
 .main-text h5 a:hover {
   color: #B2B7BA;
   text-decoration: underline;
@@ -213,23 +188,20 @@ nav span a {
   padding: 1rem 0;
   border-left: 1px solid #B2B7BA;
 }
-
 .main-supporting .supporting img {
   max-width: 35%;
   padding: 1rem;
 }
-
 .supporting {
   display: inline-flex;
   align-items: center;
   transition: all .3s;
-} /* End Main Supporting Section */
-
+}
 .supporting:hover {
   background-color: #364552;
   color: #E8EEF2;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+}/* End Main Supporting Section */
 
 /* Main Supporting Text Section */
 .supporting-text h2 {
@@ -237,46 +209,39 @@ nav span a {
   font-weight: 600;
   line-height: 2rem;
 }
-
 .supporting-text h5 {
   font-weight: 300;
   line-height: 2rem;
   padding-bottom: 1rem;
 }
-
 .supporting-text a {
   color: black;
   text-decoration: none;
   transition: all 0.3s;
 }
-
 .supporting-text a:hover {
   color: #E8EEF2;
   text-decoration: underline;
 } /* End Main Supporting Text Section */
 
-/* Learning Section */
+/* Learning Courses Section */
 .learning-container {
   border-top: 1px solid #B2B7BA;
   padding-bottom: 1rem;
   background-color: #E8EEF2;
 }
-
 .learning-container h1 {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 600;
   padding: 2rem 0 1rem;
 }
-
-/* Learning Courses Section */
 .courses {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   width: auto;
 }
-
 .course {
   width: 30%;
   margin: 1rem;
@@ -285,33 +250,28 @@ nav span a {
   color: #E8EEF2;
   transition: all .3s;
 }
-
 .course:hover {
   background-color: #939EA1;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   color: #364552;
 }
-
 .course-img img {
   width: 100%;
   height: auto;
-}
+}/* End Learning Courses Section */
 
 /* Learning Courses Text Section */
 .course-txt {
   padding: 1rem 1rem 1.5rem 1rem;
 }
-
 .course-txt h2 {
   font-size: 1.5rem;
   font-weight: 600;
 }
-
 .course-txt p {
   font-size: 1.1rem;
   font-weight: 300;
 }
-
 .course-txt h4 {
   padding: .5rem 0;
   color: #E8EEF2;
@@ -320,14 +280,14 @@ nav span a {
   font-weight: 300;
   transition: all .3s;
 }
-
-.course-txt a {
-  text-decoration: none;
-}
-
 .course-txt h4:hover {
   text-decoration: underline;
-} /* End Learning Courses Section */
+}
+.course-txt a {
+  text-decoration: none;
+}/* End Learning Courses Section */
+
+
 
 /* Thesis Section */
 .thesis-section h1 {
@@ -336,36 +296,31 @@ nav span a {
   font-weight: 600;
   padding: 2rem 0 .5rem;
 }
-
 .thesis {
   max-width: 100%;
   display: flex;
 }
-
 .thesis-vid {
   max-width: 60%;
   margin: 1.5rem;
 }
-
-.thesis-txt h1 {
-  text-align: left;
-  font-size: 2rem;
-}
-
-.thesis-txt p {
-  padding: .5rem 0 .5rem;
-  font-weight: 300;
-}
-
-.thesis .main-supporting {
-  border-left: none;
-}
-
 video {
   object-fit: contain;
   height: auto;
   width: 100%;
 }
+.thesis-txt {
+  padding-bottom: 1rem;
+}
+.thesis-txt h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding-bottom: .5rem;
+  padding-top: 1.5rem;
+}
+.thesis .main-supporting {
+  border-left: none;
+}/* End Thesis Section */
 
 /* Footer */
 footer {
@@ -399,26 +354,118 @@ footer a:hover {
   color: #364552;
 }
 
-/* Media Specific Styling */
-@media only screen and (min-width: 481px) and (max-width: 700px) {
+/* Media Specific Styling 300px to 950px */
+@media only screen and (min-width: 300px) and (max-width: 950px) {
+
+  /* Header Media Styling */
   nav {
     font-size: .8rem;
     margin-left: 0;
   }
-  .logo {
-    font-size: 1.1rem;
-    margin-right: 1rem;
-  }
-}
+  .logo, nav {
+   display: none;
+   }/* End Header Media Styling */
 
-@media only screen and (min-width: 561px) {
+   /* Banner Media Styling */
+   .banner {
+     display: inline-block;
+   }
+   .banner img {
+     max-width: 100%;
+     padding: 0;
+   }
+  .text {
+    padding: 2rem 1rem;
+    max-width: 100%;
+  }
+  .text h1 {
+    font-size: 2.3rem;
+  }
+  .text h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+  }/* End Banner Media Styling */
+
+  /* Learning Section Media Styling */
+  .courses img {
+    display: none;
+  }
+  .courses {
+    justify-content: space-around;
+    margin: 0 auto;
+  }
+  .course {
+    width: 100%;
+    margin: .5rem 1rem;
+    padding: 0;
+  }
+  .course-txt a, p {
+    display: none;
+  }
+  .course-txt h2 {
+    padding: 1rem 1rem 1.5rem;
+  }/* End Learning Section Media Styling */
+
+  /* Thesis Section Media Styling */
+  .thesis .main-supporting {
+    display: none;
+  }
+  .thesis-txt {
+    display: none;
+  }
+  .thesis-vid {
+    max-width: 100%;
+    margin: 1rem 0 1.5rem;
+  }/* End Thesis Section Media Styling */
+}/* End Media Specific Styling 300px to 950px */
+
+/* Media Specific Styling 300px to 640px */
+@media only screen and (min-width: 300px) and (max-width: 640px) {
+
+  /* Main Section Media Styling */
+  .main-box {
+    display: none;
+  }
+  .supporting-img {
+    display: none;
+  }
+  .supporting-mobile {
+    padding: 0 1rem;
+  }
+  .main-supporting {
+    max-width: 100%;
+  }
+  .main-supporting .supporting img {
+    max-width: 92%;
+  }
+  .supporting {
+    display: inline-block;
+    width: 100%;
+    padding: 1rem 0 1.5rem;
+    height: auto;
+  }
+  .supporting-text {
+    padding: 0 1rem;
+    display: inline-block;
+  }/* End Main Section Media Styling */
+
+  /* Footer Media Styling */
+  footer a {
+    display: none;
+  }/* End Footer Media Styling */
+}/* End Media Specific Styling 300px to 640px */
+
+/* Media Query Section 950px */
+@media only screen and (min-width: 950px) {
 .phone-container {
   display: none;
   }
-}
+}/* End Media Query Section 950px */
 
-@media only screen and (min-width: 320px) and (max-width: 560px) {
- .logo, nav {
-  display: none;
+/* Media Query Section 640px */
+@media only screen and (min-width: 640px) {
+  .supporting-mobile {
+    display: none;
   }
-}
+}/* End Media Query Section 640px */
